# RS422-485-Transceiver-Project

./: .gitattributes  .gitignore  README.md  linuxReleaseDoc.md  rsConfig.json
RS422-485GuiApp/: CMakeLists.txt  RS422_485GuiApp.desktop  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
common/include/: common.hpp
common/src/: common.cpp
configuration/include/: configuration.hpp  serialPortSettings.hpp
configuration/src/: configuration.cpp
logger/include/: logger.hpp
logger/src/: logger.cpp
messageHandler/include/: iMessageParser.hpp  messageHandler.hpp  mtmParser.hpp
messageHandler/src/: messageHandler.cpp  mtmParser.cpp
receiver/: CMakeLists.txt
receiver/include/: receiver.hpp
receiver/scripts/: build.sh  clean.sh  run.sh
receiver/src/: main.cpp  receiver.cpp
transmitter/: CMakeLists.txt
transmitter/include/: transmitter.hpp
transmitter/scripts/: run.sh
transmitter/src/: main.cpp  transmitter.cpp
